Viewports and Footers
 I added and styled the footer for the website. I originally wanted to make changes for the navbar and script it to be sticky, but I instead I went to the footer for time and preparation reasons.

I made the footer to be similar to https://rewindapp.flatstudio.co/  's footer with logos on it. Using the pixel sprites as placeholder images for my Github, Twiiter, Facebook, and Linkdin.

The font styling needs more work. I wanna change the h1 h2 h3 and h4 fonts to be condensed instead of just being a bold version of the roboto font.

going to leave the footer as is for now, with the intention of tweaking the fonts, the logo links, and the dividers to be centered later on.

Next commit will be to make the navbar sticky and responsive

--- a/projHan_stylesheet.css
+++ b/projHan_stylesheet.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     --textColor: rgb(245, 255, 247);
     --bgColor1: rgb(14, 13, 20);
@@ -23,6 +26,12 @@ h1{
     font-size: 60px;
 }
 img{
+    margin: 0;
+}
+
+/* -------------------------------------------------------- */
+
+.view-port{
     margin: 0;
 }
 
@@ -341,9 +350,79 @@ button:hover{
     color: var(--textColor);
     outline: 2px solid var(--accentColor);
 }
+/* ---------------------------------------------------------------- */
 
-.social-media img{
-    height: 100px;
-    width: 100px;
-    padding-top: 5vh;
+.footer{
+    display: grid;
+
+    justify-items: center;
+    align-items: center;
+
+    font-stretch: condensed;
+    margin: 10% 3% 2% ;
+
 }
+.social-media{
+    display: grid;
+
+    padding-top: 3vh;
+
+}
+    .social-media ul{
+        
+        margin: 0%;
+        padding: 0%;
+
+        padding-top: 4%;
+    }
+    .social-media ul li{
+        list-style-type: none;
+        display: inline;
+
+        padding-left: 2vw;
+
+
+        align-items: center;
+
+    }
+    .social-media li:not(:first-child):before {
+        content: "/";
+
+        font-size: 600%;
+
+        font-weight: lighter;
+        
+        padding-right: 2vw;
+
+        opacity: 50%;
+    }
+    .foot-links{
+        display: grid;
+    
+        grid-template-columns: 1fr 1fr 2fr 1fr 1fr;
+    
+        width: 100%;
+    
+        grid-template-rows: 1fr;
+    
+        align-items: center;
+    
+        justify-content:end;
+    
+        margin-top: 10%;
+    
+    }
+    .footer a{
+        text-decoration: none;
+        color: var(--textColor);
+        opacity: 50%;
+    }
+    .footer a:hover{
+        opacity: 100%;
+    }
+    .foot-link{
+        font-weight: lighter;
+    }
+    .footer-logo{
+        font-size: 200%;
+    }
