comments and suggestions push
I was reviewing my html and styling and decided I needed to change a few things.

1. I changed the bg color of .nav-bar to be bgColor3 because bgColor1 was disonant to the color scheme
2. I added Comments and suggestions to the HTML tags for how I should style them to look better or more efficient for the user experience or aesthetics (both animations and static looks)
3. Added dividers and labels for the arranged CSS to make it easier to read and locate the stylings for the the style of the webpages

P.S. using this arragned method for CSS is so much better. I plan to replace all the css in my project to use SASS instead of base CSS to make the styling for each element nested instead of just laid out in a big pile/column of CSS.

--- a/projHan_stylesheet.css
+++ b/projHan_stylesheet.css
@@ -1,3 +1,6 @@
+
+/* --------------GLOBAL STYLING---------------- */
+
 html{
     scroll-behavior: smooth;
 }
@@ -29,13 +32,13 @@ img{
     margin: 0;
 }
 
-/* -------------------------------------------------------- */
+/* -----------------GLOBAL CONTAINER STYLING-------------------- */
 
 .view-port{
     margin: 0;
 }
 
-/* -------------------------------------------------------- */
+/* -----------------NAVBAR STYLING------------------ */
 
 .nav-bar{
     display: grid;
@@ -45,7 +48,9 @@ img{
 
     height: 6vh;
 
-    background-color: rgb(14, 13, 20);
+    background-color: var(--bgColor3);
+
+    top: 0;
 
 }
     .nav-bar a{
@@ -88,7 +93,7 @@ img{
         transform: translateY(-2px);
     }
     
-/* -------------------------------------------------------- */
+/* ----------HERO BANNER AND LANDING PAGE STYLING---------- */
 
 .landing{
     display: grid;
@@ -101,6 +106,7 @@ img{
 
 }
 
+/* --- custom hover text animation --- */
 .hover_head{
     margin-top: 1em;
     margin-bottom: 1em;
@@ -126,9 +132,6 @@ img{
             text-underline-offset: 5px;
         }
 
-
-/* -------------------------------------------------------- */
-
 .hero-banner{
     background-image: url(./pictures/Camp3-2.png);
     
@@ -151,7 +154,7 @@ img{
     height: 35vh;
 }
 
-/* -------------------------------------------------------- */
+/* ----------------CONTENT STYLING----------------- */
 
 .content{
     padding-top: 10vh;
@@ -199,6 +202,8 @@ img{
         text-decoration: underline var(--bgColor1) 7px;
         text-underline-offset: 15px;
     }
+
+/* --------- IMAGE GALLERY CSS ------------ */
 
 .image-gallery{
     --gap: 20px;
@@ -252,7 +257,6 @@ img{
 
     display: grid;
     grid-template-columns: repeat(var(--num-col), 1fr);
-    /* oh wow, there are variables in normal css now*/
 
     grid-auto-rows: var(--row-height);
     gap: var(--gap);
@@ -272,6 +276,8 @@ img{
         transform:scale(1.05);
     }
 
+
+/* ---------- EMAIL FORM CSS ------------ */
 
 .email{
     width: 30vw;
@@ -334,6 +340,8 @@ img{
     align-content: center;
 }
 
+/* -----------------BUTTONS CSS----------------------- */
+
 button{
     width: 150px;
     font-size: 20px;
@@ -350,7 +358,7 @@ button:hover{
     color: var(--textColor);
     outline: 2px solid var(--accentColor);
 }
-/* ---------------------------------------------------------------- */
+/* -------------------FOOTER CSS---------------------- */
 
 .footer{
     display: grid;
